// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
Object {
  "Constructor": "Input",
  "Options": Object {
    "ID": "widget",
    "containerSelector": "body",
    "placeholder": "",
    "tabindex": 1,
    "types": Array [],
  },
  "html": "<input placeholder=\\"\\" tabindex=\\"1\\">",
}
`;

exports[`with props 1`] = `
Object {
  "Constructor": "Input",
  "Options": Object {
    "ID": "widget",
    "containerSelector": "body",
    "id": "expression-input",
    "name": "expression",
    "placeholder": "a && b",
    "tabindex": 2,
    "types": Array [],
  },
  "html": "<input id=\\"expression-input\\" placeholder=\\"a &amp;&amp; b\\" tabindex=\\"2\\" name=\\"expression\\">",
}
`;
